[tool.poetry]
name = "facie"
version = "0.1.0"
description = "Introspection tools for python"
authors = ["WithPrecedent <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
